--- a/Financial_MLP.ipynb
+++ b/Financial_MLP.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "#Carregando os dados\n",
-    "data = pd.read_csv(\"./Data/Stocks/^BVSP.csv\", usecols= ['Date','Open', 'High', 'Low', 'Close', 'Volume'])\n",
+    "data = pd.read_csv(\"./^BVSP.csv\", usecols= ['Date','Open', 'High', 'Low', 'Close', 'Volume'])\n",
     "data['Date'] = pd.to_datetime(data['Date'])\n",
     "data.set_index('Date', inplace=True)\n",
     "data.describe()\n",
